# pt2rknn

./: .gitmodules  LICENSE  README.md  pyproject.toml
models/: host_model_12000.rknn
scripts/: convert_onnx_to_rknn.py  export_host_to_onnx.py  onnx2rknn.py
tests/: test_onnx_inference.py
wheels/onnxoptimizer/: onnxoptimizer.py  setup.py
wheels/onnxoptimizer/onnxoptimizer.egg-info/: PKG-INFO  SOURCES.txt
